появились роли(права). при регистрации USER роль всем. ADMIN выставляется через бану руками.