@@ -3,9 +3,11 @@ package com.dmitrii.spring.security.lesson.FirtsSpringSecurityApp.security;
 import com.dmitrii.spring.security.lesson.FirtsSpringSecurityApp.model.People;
 import org.jspecify.annotations.Nullable;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -22,7 +24,7 @@ public class PeopleDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority(people.getRole()));
     }
 
     @Override
